# bazzulto-os

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Claude.md  LICENSE  Makefile  README.md  create_disk.py  mkdocs.yml
kernel/: Cargo.toml  build.rs
kernel/.cargo/: config.toml
kernel/arch/arm64/: linker.ld  timer.c
kernel/arch/arm64/boot/: main.c  splash.c  start.S
kernel/arch/arm64/exceptions/: exception_vectors.S  exceptions.c
kernel/arch/arm64/syscall/: syscall.c
kernel/arch/arm64/systemcall/: systemcall.c
kernel/drivers/console/: console.c  font_latin_extended.c  font_latin_extended.h
kernel/drivers/input/: input.c
kernel/drivers/keyboard/: keyboard.c  keymap.c
kernel/drivers/tty/: tty.c
kernel/drivers/uart/: uart.c
kernel/drivers/virtio/: virtio_mmio.c
kernel/filesystem/: filesystem_disk.c  fs_proc.c  fs_ram.c  fs_system.c  ramfs.c  vfs_scheme.c  virtual_file_system.c
kernel/lib/: stdio.c  stdlib.c  string.c
kernel/loader/: elf_loader.c
kernel/memory/: MEMORY.md  TECHNICAL_DEBT.md  heap.c  physical_memory.c  virtual_memory.c
kernel/platform/qemu_virt/: gicv2.c  keyboard_virtio.c  pl011.c  platform_init.c  timer.c  virtio_blk.c  virtio_mmio.c
kernel/scheduler/: TECHNICAL_DEBT.md  context_switch.S  pid.c  scheduler.c  waitqueue.c
kernel/src/: main.rs
kernel/src/arch/arm64/: mod.rs
kernel/src/arch/arm64/boot/: mod.rs  start.S
kernel/src/arch/arm64/exceptions/: mod.rs  vectors.S
kernel/src/crypto/: mod.rs  sha256.rs
kernel/src/display/: mod.rs
kernel/src/drivers/: console.rs  input.rs  mod.rs  pty.rs  tty.rs  uart.rs
kernel/src/fs/: bafs_driver.rs  devfs.rs  epoll.rs  fat32.rs  fifo.rs  inode.rs  mod.rs  mount.rs  partition.rs  pipe.rs  procfs.rs  ramfs.rs  tmpfs.rs  vfs.rs
kernel/src/fs/btrfs/: btree.rs  chunk.rs  crc32c.rs  mod.rs  ondisk.rs  read.rs  superblock.rs  write.rs
kernel/src/hal/: disk.rs  irq.rs  keyboard.rs  mod.rs  platform.rs  timer.rs  uart.rs
kernel/src/ipc/: mod.rs  mqueue.rs  sem.rs  socket.rs
kernel/src/limine/: mod.rs
kernel/src/loader/: mod.rs
kernel/src/memory/: address.rs  heap.rs  mod.rs  physical.rs  virtual_memory.rs
kernel/src/permission/: ipc_channel.rs  mod.rs  policy_store.rs
kernel/src/platform/: dtb.rs  mod.rs  platform_trait.rs
kernel/src/platform/qemu_virt/: gicv2.rs  gicv3.rs  keyboard_virtio.rs  mod.rs  rtc.rs  timer.rs  virtio_blk.rs  virtio_mmio.rs
kernel/src/process/: context_switch.S  mod.rs
kernel/src/scheduler/: mod.rs
kernel/src/smp/: mod.rs
kernel/src/sync/: mod.rs  spinlock.rs
kernel/src/syscall/: mod.rs
kernel/src/systemcalls/: bpm.rs  identity.rs  io.rs  memory.rs  mod.rs  multiplexing.rs  posix_abi.rs  process.rs  scheduler.rs  signals.rs  system.rs  terminal.rs  threads.rs  time.rs  vfs.rs
kernel/src/vdso/: abi_verify.rs  mod.rs
userspace/: Cargo.toml  bsl.ld
userspace/cat/: cat.c  cat_embed.S
userspace/config/: disk-mounts
userspace/config/services/: bz-filesystem.service  permissiond.service  shell.service
userspace/config/system_config/: group  hostname  passwd  shadow
userspace/config/test_files/: public.txt  root_secret.txt  script.sh
userspace/cp/: cp.c  cp_embed.S
userspace/df/: df.c  df_embed.S
userspace/echo/: echo.c  echo_embed.S
userspace/grep/: grep.c  grep_embed.S
userspace/head/: head.c  head_embed.S
userspace/hello/: hello.c  hello_embed.S
userspace/help/: help.c  help_embed.S
userspace/hexdump/: hexdump.c  hexdump_embed.S
userspace/kill/: kill.c  kill_embed.S
userspace/lib/bsl/Bazzulto.Display/: Cargo.toml
userspace/lib/bsl/Bazzulto.Display/src/: color.rs  ffi.rs  font_manager.rs  geometry.rs  lib.rs  screen.rs  surface.rs
userspace/lib/bsl/Bazzulto.IO/: Cargo.toml
userspace/lib/bsl/Bazzulto.IO/src/: file.rs  lib.rs  path.rs  stream.rs
userspace/lib/bsl/Bazzulto.System/: Cargo.toml
userspace/lib/bsl/Bazzulto.System/src/: alloc_impl.rs  console.rs  diagnostics.rs  environment.rs  info.rs  lib.rs  memory.rs  raw.rs  thread.rs  time.rs  vdso.rs
userspace/libc/: assert.h  ctype.c  ctype.h  errno.c  errno.h  limits.h  stdio.c  stdio.h  stdio_test_shim.c  stdlib.c  stdlib.h  string.c  string.h  unistd.c  unistd.h  utf8.c  utf8.h
userspace/libraries/bsl/Bazzulto.Display/src/: font_manager.rs
userspace/libraries/bsl/Bazzulto.IO/src/: binary_reader.rs  binary_writer.rs  directory.rs  directory_info.rs  drive_info.rs  file.rs  file_info.rs  filesystem_watcher.rs  io_traits.rs  lib.rs  memory_stream.rs  stream_reader.rs  stream_writer.rs
userspace/libraries/bsl/Bazzulto.System/src/: lib.rs  (+9 more)
userspace/ls/: ls.c  ls_embed.S
userspace/mount/: mount.c  mount_embed.S
userspace/programs/coreutils/: COREUTILS.md  Cargo.toml
userspace/programs/coreutils/src/: lib.rs
userspace/programs/sh/: Cargo.toml
userspace/programs/sh-tests/: Cargo.toml
userspace/programs/sh-tests/tests/: expand.rs  lexer.rs  parser.rs  vars.rs
userspace/programs/sh/src/: builtins.rs  executor.rs  expand.rs  lexer.rs  main.rs  parser.rs  vars.rs
userspace/ps/: ps.c  ps_embed.S
userspace/rm/: rm.c  rm_embed.S
userspace/services/: bz-gpu.service  bz-net.service  bzdisplayd.service  shell.service
userspace/shell/: shell.c  shell_embed.S
userspace/sleep/: sleep.c  sleep_embed.S
userspace/system/bzctl/: Cargo.toml
userspace/system/bzdisplayd/: Cargo.toml
userspace/system/bzdisplayd/src/: main.rs  text_renderer.rs
userspace/system/bzinit/: Cargo.toml
userspace/system/bzinit/src/: compat.rs  dependency.rs  main.rs  service.rs  supervisor.rs
userspace/system/fontmanager/: Cargo.toml  build.rs
userspace/system/fontmanager/src/: main.rs
userspace/system/permissiond/: Cargo.toml  build.rs
userspace/system/permissiond/src/: main.rs
userspace/tee/: tee.c  tee_embed.S
userspace/touch/: touch.c  touch_embed.S
userspace/wc/: wc.c  wc_embed.S
(+134 files in other folders)
