[package]
name = "bazzulto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bazzulto"
path = "src/main.rs"

[dependencies]
# BAFS filesystem driver.  The `kernel` feature activates no_std+alloc mode
# and exposes the `volume` API used by `fs/bafs_driver.rs`.
bafs = { path = "src/fs/bafs", features = ["kernel"] }

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
opt-level = 2
lto = true
codegen-units = 1
