[package]
name    = "coreutils"
version = "0.1.0"
edition = "2021"

[lib]
name = "coreutils"
path = "src/lib.rs"

[dependencies]
bazzulto-system = { path = "../../libraries/bsl/Bazzulto.System" }
bazzulto-io     = { path = "../../libraries/bsl/Bazzulto.IO" }

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "cat"
path = "src/bin/cat.rs"

[[bin]]
name = "ls"
path = "src/bin/ls.rs"

[[bin]]
name = "cp"
path = "src/bin/cp.rs"

[[bin]]
name = "mv"
path = "src/bin/mv.rs"

[[bin]]
name = "rm"
path = "src/bin/rm.rs"

[[bin]]
name = "wc"
path = "src/bin/wc.rs"

[[bin]]
name = "head"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
path = "src/bin/tail.rs"

[[bin]]
name = "grep"
path = "src/bin/grep.rs"

[[bin]]
name = "sort"
path = "src/bin/sort.rs"

[[bin]]
name = "uniq"
path = "src/bin/uniq.rs"

[[bin]]
name = "cut"
path = "src/bin/cut.rs"

[[bin]]
name = "tr"
path = "src/bin/tr.rs"

[[bin]]
name = "touch"
path = "src/bin/touch.rs"

[[bin]]
name = "sleep"
path = "src/bin/sleep.rs"

[[bin]]
name = "true"
path = "src/bin/true.rs"

[[bin]]
name = "false"
path = "src/bin/false.rs"

[[bin]]
name = "basename"
path = "src/bin/basename.rs"

[[bin]]
name = "dirname"
path = "src/bin/dirname.rs"

[[bin]]
name = "printf"
path = "src/bin/printf.rs"

[[bin]]
name = "env"
path = "src/bin/env.rs"

[[bin]]
name = "reboot"
path = "src/bin/reboot.rs"

[[bin]]
name = "shutdown"
path = "src/bin/shutdown.rs"

[[bin]]
name = "df"
path = "src/bin/df.rs"

[[bin]]
name = "cksum"
path = "src/bin/cksum.rs"

[[bin]]
name = "diff"
path = "src/bin/diff.rs"
